[tool.poetry]
name = "repl_python3_310-L11-Cleaning-Data-Starter-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
statsmodels = "^0.13.2"
pandas = "^1.5.1"
seaborn = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
